# skills-hub-by-ai

./: .gitignore  package-lock.json
.kiro/skills/feature-analyst/: SKILL.md
.kiro/skills/feature-archiver/: SKILL.md
.kiro/skills/feature-designer/: SKILL.md
.kiro/skills/feature-link-test-writer/: SKILL.md
.kiro/skills/feature-task-maker/: SKILL.md
.kiro/skills/flutter-build-verify/: SKILL.md
.kiro/skills/fx-dio-usage/: SKILL.md
.kiro/skills/modular-design/: SKILL.md
.kiro/skills/pptx/: SKILL.md
.kiro/steering/: feature-mermaid-maker.md  feature-workflow.md  ui-style.md
.kiro/steering/rust/: code-style.md  error-handling.md
client/: README.md  pubspec.yaml
client/android/: build.gradle.kts
client/android/app/: build.gradle.kts
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/linux/: CMakeLists.txt
client/linux/runner/: my_application.cc
client/macos/Runner.xcodeproj/: project.pbxproj
client/test/: widget_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
docs/: Skills-Hub-迭代复盘.pptx  skills-hub-iteration.js
docs/features/archiver/: index.md
scripts/deploy/: db.py
scripts/server/: seed.json  seed.py  start.py
server/: Cargo.toml
server/migrations/: 20260612_012_skills.sql  20260614_001_skills.sql
server/src/: app_error.rs  app_response.rs  main.rs  net_util.rs
server/src/skill/: mod.rs  skill_model.rs  skill_repository.rs  skill_router.rs  skill_service.rs
(+67 files in other folders)
